--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
 REACT_APP_CLOUD_NAME_CLOUDINARY = damrfiydc
+NODE_ENV = 'production'
 GOOGLE_SERVICE_ACCOUNT_KEY_PATH="C:\Users\Judith Richard\Documents\Genius store\frontend\src\assets\genuis-storage-09cda294bfd1.json"
