--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 MOONGODB_URI = mongodb+srv://judithchard1111:Omalicha@gmijpnstore.scz5r.mongodb.net/gmijpnStore?retryWrites=true&w=majority&appName=gmijpnStore
 TOKEN_SECRET_KEY = "EJEKWALAEBAEMEKAISIEMEISIOKPUKPUXYZDIKAGU"
-FRONTEND_URL = http://localhost:3000
+FRONTEND_URL = https://gmijpn.netlify.app
